--- a/text/biblio.bib
+++ b/text/biblio.bib
@@ -1,4 +1,4 @@
-@book{Jones,
+@book{jones,
  author = {Jones, Neil D.},
  title = {Computability and complexity: from a programming perspective},
  year = {1997},
