--- a/text/self/main.tex
+++ b/text/self/main.tex
@@ -1,3 +1,21 @@
-\section{Self Interpretation} % (fold)
+\section{Self Interpretation\timeestimation{15h}}
 \label{sec:self}
-15h
+Self interpretation is the ability of an formalism to support an "universal 
+mechanism", that is a program that can interpret a finite description of any 
+programs in itself and apply it to input.
+
+For computability, self interpretation can be seen as some kind of gold
+standard\citationneeded. This stems from the fact, that a simpler model of
+computation, primitive recursive functions, are not self interpreting.
+\lineofthought{How important {\em is} self-interpretation? What are the minimal
+operations that are needed besides a self-interpretor to get full-blown
+turing-completeness? I conjegure something extremely simple like the base
+functions of primitive recursion. This would be some support for Church thesis
+from below -- every sufficiently advanced language (supports
+self-interpretation) is Turing-complete. 
+
+This is actually quite obvious by the fact, that once universality is a
+primitive operation, all programming constructs are then mere transformation of
+data.}
+
+
