--- a/text/transforms/main.tex
+++ b/text/transforms/main.tex
@@ -1,3 +1,18 @@
-\section{Language Transforms} % (fold)
+\section{Language Transforms\timeestimation{25h}} % (fold)
 \label{sec:transforms}
-25h
+\subsection{Language Subsets} % (fold)
+\label{sub:Language Subsets}
+
+% subsection Language Subsets (end)
+\subsection{Interpreter} % (fold)
+\label{sub:Interpreter}
+
+% subsection Interpreter (end)
+\subsection{Compiler} % (fold)
+\label{sub:Compiler}
+
+% subsection Compiler (end)
+\subsection{Futamura} % (fold)
+\label{sub:Futamura}
+
+% subsection Futamura (end)
