--- a/text/while/main.tex
+++ b/text/while/main.tex
@@ -1,3 +1,10 @@
-\section{The {\tt WHILE} Language}
+\section{The {\tt WHILE} Language\timeestimation{15h}}
 \label{sec:WHILE}
-15h
+\subsection{{\tt cons} Data} % (fold)
+\label{sub:cons}
+\subsubsection{Natural Numbers} % (fold)
+\label{ssub:Natural Numbers}
+
+% subsubsection Natural Numbers (end)
+
+% subsection cons (end)
