--- a/text/complexity/main.tex
+++ b/text/complexity/main.tex
@@ -1,3 +1,26 @@
-\section{Complexity in Languages} % (fold)
+\section{Complexity in Languages\timeestimation{30h}}
 \label{sec:complexity}
-30h
+\subsection{Language Subsets} % (fold)
+\label{sub:Language Subsets}
+
+% subsection Language Subsets (end)
+\subsection{Complexity by Dialect} % (fold)
+\label{sub:Complexity by Dialect}
+\subsubsection{$P$ complexity} % (fold)
+\label{ssub:P-complexity}
+
+% subsubsection P-complexity (end)
+\subsubsection{$NP$ complexity} % (fold)
+\label{ssub:NP-complexity}
+
+% subsubsection NP-complexity (end)
+\subsubsection{$P \neq NP$ from a Linguistic Point of View} % (fold)
+\label{ssub:PNP from a Linguistic Point of View}
+\lineofthought{
+  Um zu zeigen, dass $NP \neq P$ ist, muss nun gezeigt werden, dass sich das 
+  Kommando {\tt CHOICE} nicht in die $P$ Sprache übersetzen lässt.
+}
+
+% subsubsection $P \neq NP$ from a Linguistic Point of View (end)
+
+% subsection Complexity by Dialect (end)
