--- a/text/self/main.tex
+++ b/text/self/main.tex
@@ -16,6 +16,4 @@ self-interpretation) is Turing-complete.
 
 This is actually quite obvious by the fact, that once universality is a
 primitive operation, all programming constructs are then mere transformation of
-data.}
-
-
+data. See also Structured Program Theorem.}
