--- a/text/transforms/main.tex
+++ b/text/transforms/main.tex
@@ -2,7 +2,10 @@
 \label{sec:transforms}
 \subsection{Language Subsets} % (fold)
 \label{sub:Language Subsets}
+\paragraph{{\tt C++}  and {\tt C} } % (fold)
+\label{par:Cpp and C}
 
+% paragraph Cpp and C (end)
 % subsection Language Subsets (end)
 \subsection{Interpreter} % (fold)
 \label{sub:Interpreter}
@@ -10,9 +13,26 @@
 % subsection Interpreter (end)
 \subsection{Compiler} % (fold)
 \label{sub:Compiler}
+\paragraph{Wie der {\tt gcc} portiert wird} % (fold)
+\label{par:Wie der gcc portiert wird}
+\lineofthought{ Bootstrapping von {\tt gcc} }
+% paragraph Wie der gcc portiert wird (end)
 
 % subsection Compiler (end)
-\subsection{Futamura} % (fold)
+\subsection{Futamura Projections} % (fold)
 \label{sub:Futamura}
+\subsubsection{Specializer} % (fold)
+\label{ssub:Specializer}
+\subsubsection{Futamura Projections} % (fold)
+\label{ssub:Futamura Projections}
 
+% subsubsection Futamura Projections (end)
+\paragraph{The PyPy project} % (fold)
+\label{par:The PyPy project}
+\lineofthought{Research how PyPy uses specializers and how that does compare 
+to the Futamura Projections.}
+
+% paragraph The PyPy project (end)
+
+% subsubsection Specializer (end)
 % subsection Futamura (end)
