Added Readme, some work on WHILE parser

--- a/text/complexity/main.tex
+++ b/text/complexity/main.tex
@@ -1,5 +1,10 @@
 \section{Complexity in Languages\timeestimation{30h}}
 \label{sec:complexity}
+While most languages we encounter are turing-complete, that does not 
+need to be the case and in fact some non-turing-complete languages have very 
+interesting properties. In this chapter, I'll discuss some variations of the 
+languages seen so far that relate to special classes of complexity and the 
+notion of being complex relative to a language.
 \subsection{Complexity by Dialect} % (fold)
 \label{sub:Complexity by Dialect}
 \subsubsection{$P$ complexity} % (fold)
@@ -14,7 +19,8 @@
 \label{ssub:PNP from a Linguistic Point of View}
 \lineofthought{
   Um zu zeigen, dass $NP \neq P$ ist, muss nun gezeigt werden, dass sich das 
-  Kommando {\tt CHOICE} nicht in die $P$ Sprache übersetzen lässt.
+  Kommando {\tt CHOICE} nicht in die $P$ Sprache übersetzen lässt, ohne den 
+  Quelltext übermässig zu verlängern.
 }
 
 % subsubsection $P \neq NP$ from a Linguistic Point of View (end)
