--- a/text/while/main.tex
+++ b/text/while/main.tex
@@ -6,7 +6,7 @@
   \begin{itemize}
   	\item Unrestricted Recursion
 	\item Unbound Search ($\mu$)
-	\item Applying rules as long as possible.
+	\item Applying rules as long as possible (Markov)
   \end{itemize}
 }
 % paragraph Alternatives to the WHILE construct (end)
