--- a/text/main.tex
+++ b/text/main.tex
@@ -7,13 +7,24 @@
 \usepackage{cite}
 \usepackage{newclude}
 \usepackage{stmaryrd}
-\usepackage{hyperref}
-\usepackage[titletoc]{appendix}
+\usepackage[colorlinks]{hyperref}
+\usepackage[titletoc,page]{appendix}
 \usepackage[stable]{footmisc}
+
+% Note Commands
 \newcommand{\timeestimation}[1]{ \footnote{#1} }
 \newcommand{\citationneeded}{{\em (citation needed) } }
 \newcommand{\lineofthought}[1]{{\bf [#1] }}
+
+% Disabled Note Commands
+%\newcommand{\timeestimation}[1]{}
+%\newcommand{\citationneeded}{}
+%\newcommand{\lineofthought}[1]{}
+
 \newcommand{\interpret}[1]{\ensuremath{\left\llbracket #1 \right\rrbracket}}
+\newtheorem{prop}{Proposition}
+\theoremstyle{definition}
+\newtheorem{defn}{Definition}
 
 \author{Aaron Karper}
 \title{A Programming Language Oriented Approach to Computability}
