--- a/text/while/main.tex
+++ b/text/while/main.tex
@@ -1,5 +1,19 @@
 \section{The {\tt WHILE} Language\timeestimation{15h}}
 \label{sec:WHILE}
+While most modern programming languages today are turing complete and as such 
+are "equally powerful". For simplicity however not all languages are created 
+equal, as \ref{sub:Turing Completeness} will note. Lets therefore introduce a 
+simple, but expressive enough language called {\tt WHILE}.
+
+\subsection{The Elements} % (fold)
+\label{sub:The Elements}
+\paragraph{Data} % (fold)
+\label{par:Data}
+
+% paragraph Data (end)
+\lineofthought{Wie bei Common Lisp}
+
+% subsection The Elements (end)
 \paragraph{Alternatives to the {\tt WHILE} construct} % (fold)
 \label{par:Alternatives to the WHILE construct}
 \lineofthought{
@@ -10,9 +24,6 @@
   \end{itemize}
 }
 % paragraph Alternatives to the WHILE construct (end)
-\subsection{{\tt cons} Data} % (fold)
-\label{sub:cons}
-\lineofthought{Wie bei Common Lisp}
 \subsubsection{Natural Numbers} % (fold)
 \label{ssub:Natural Numbers}
 \lineofthought{Bei \cite{jones} sind Zahlen unär codiert, zerstört das nicht 
