Some reformating and some minor additions in the transforms part

--- a/text/abstract.tex
+++ b/text/abstract.tex
@@ -1,9 +1,9 @@
-The field of computability and complexity was, where computer science sprung 
-from. Turing, Church, and Kleene all developed formalisms that demonstrated 
-what they held "intuitively computable". The times change however and today's 
-(aspiring) computer scientists are less proficient in building automata or 
-composing functions and are much more native to the world of programming 
-languages. This article will try to introduce typical concepts of 
-computability theory and complexity in a form more fitted for a modern developer.
-It is mostly based on \cite{jones}, but takes input from other sources to 
-provide examples, additional information, etc.
+The field of computability and complexity was, where computer science
+sprung from. Turing, Church, and Kleene all developed formalisms that
+demonstrated what they held "intuitively computable". The times change
+however and today's (aspiring) computer scientists are less proficient in
+building automata or composing functions and are much more native to the
+world of programming languages. This article will try to introduce typical
+concepts of computability theory and complexity in a form more fitted for
+a modern developer.  It is mostly based on \cite{jones}, but takes input
+from other sources to provide examples, additional information, etc.
