--- a/text/complexity/main.tex
+++ b/text/complexity/main.tex
@@ -1,10 +1,10 @@
 \section{Complexity in Languages\timeestimation{30h}}
 \label{sec:complexity}
-While most languages we encounter are turing-complete, that does not 
-need to be the case and in fact some non-turing-complete languages have very 
-interesting properties. In this chapter, I'll discuss some variations of the 
-languages seen so far that relate to special classes of complexity and the 
-notion of being complex relative to a language.
+While most languages we encounter are turing-complete, that does not need
+to be the case and in fact some non-turing-complete languages have very
+interesting properties. In this chapter, I'll discuss some variations of
+the languages seen so far that relate to special classes of complexity and
+the notion of being complex relative to a language.
 \subsection{Complexity by Dialect} % (fold)
 \label{sub:Complexity by Dialect}
 \subsubsection{$P$ complexity} % (fold)
