--- a/text/main.tex
+++ b/text/main.tex
@@ -25,6 +25,7 @@
 \newtheorem{prop}{Proposition}
 \theoremstyle{definition}
 \newtheorem{defn}{Definition}
+\newtheorem*{example}{Example}
 
 \author{Aaron Karper}
 \title{A Programming Language Oriented Approach to Computability}
