major additions to text

--- a/text/appendix.tex
+++ b/text/appendix.tex
@@ -1,2 +1,11 @@
 \section{Implementing the {\tt WHILE} Language} 
 \label{sec:implementing while}
+\section{Questions}
+\lineofthought{
+  \begin{itemize}
+  	\item Is this supposed to be more of a text book article
+	\item Do I need to include exercises?
+	\item How much basics have to be included (Halting Problem, ...), does it 
+	  need to be stand-alone?
+  \end{itemize}
+}
