--- a/text/biblio.bib
+++ b/text/biblio.bib
@@ -6,3 +6,21 @@
  publisher = {MIT Press},
  address = {Cambridge, MA, USA},
 } 
+
+@inproceedings{psycho,
+ author = {Rigo, Armin},
+ title = {Representation-based just-in-time specialization and the psyco prototype for python},
+ booktitle = {Proceedings of the 2004 ACM SIGPLAN symposium on Partial evaluation and semantics-based program manipulation},
+ series = {PEPM '04},
+ year = {2004},
+ isbn = {1-58113-835-0},
+ location = {Verona, Italy},
+ pages = {15--26},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/1014007.1014010},
+ doi = {10.1145/1014007.1014010},
+ acmid = {1014010},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {just-in-time specialization, python, representation, unlift},
+} 
