--- a/text/complexity/main.tex
+++ b/text/complexity/main.tex
@@ -19,8 +19,7 @@ the notion of being complex relative to a language.
 \label{ssub:PNP from a Linguistic Point of View}
 \lineofthought{
   Um zu zeigen, dass $NP \neq P$ ist, muss nun gezeigt werden, dass sich das 
-  Kommando {\tt CHOICE} nicht in die $P$ Sprache übersetzen lässt, ohne den 
-  Quelltext übermässig zu verlängern.
+  Kommando {\tt CHOICE} nicht in die $P$ Sprache übersetzen lässt.
 }
 
 % subsubsection $P \neq NP$ from a Linguistic Point of View (end)
