--- a/text/main.tex
+++ b/text/main.tex
@@ -11,6 +11,12 @@
 \usepackage[titletoc,page]{appendix}
 \usepackage[stable]{footmisc}
 
+\newcommand{\pfunc}{\xrightarrow{p}}
+\newcommand{\peq}{\simeq}
+\newcommand{\listof}[1]{\left< #1 \right> }
+\newcommand{\applied}[1]{\left\{ #1 \right\} }
+\newcommand{\coded}[1]{\ulcorner #1 \urcorner }
+
 % Note Commands
 \newcommand{\timeestimation}[1]{ \footnote{#1} }
 \newcommand{\citationneeded}{{\em (citation needed) } }
@@ -39,6 +45,8 @@
 \include*{while/main}
 
 \include*{transforms/main}
+
+\include*{completeness/main}
 
 \include*{self/main}
 
