--- a/text/self/main.tex
+++ b/text/self/main.tex
@@ -2,18 +2,12 @@
 \label{sec:self}
 Self interpretation is the ability of an formalism to support an
 "universal mechanism", that is a program that can interpret a finite
-description of any programs in itself and apply it to input.
+description of any programs in itself and apply it to some input.
 
 For computability, self interpretation can be seen as some kind of gold
 standard\citationneeded. This stems from the fact, that a simpler model of
 computation, primitive recursive functions, are not self interpreting.
-\lineofthought{How important {\em is} self-interpretation? What are the
-minimal operations that are needed besides a self-interpretor to get
-full-blown turing-completeness? I conjegure something extremely simple
-like the base functions of primitive recursion. This would be some support
-for Church thesis from below -- every sufficiently advanced language
-(supports self-interpretation) is Turing-complete. 
-
-This is actually quite obvious by the fact, that once universality is a
-primitive operation, all programming constructs are then mere
-transformation of data. See also Kleene Partial Recursive Functions.}
+\lineofthought{How important {\em is} self-interpretation? 
+Self-interpretation is a very fast way to turing completeness, since once
+universality is an operation, all programming constructs are then mere
+transformation of data. See also Kleene's Partial Recursive Functions.}
