--- a/text/while/main.tex
+++ b/text/while/main.tex
@@ -1,9 +1,9 @@
 \section{The {\tt WHILE} Language\timeestimation{15h}}
 \label{sec:WHILE}
-While most modern programming languages today are turing complete and as such 
-are "equally powerful". For simplicity however not all languages are created 
-equal, as \ref{sub:Turing Completeness} will note. Lets therefore introduce a 
-simple, but expressive enough language called {\tt WHILE}.
+While most modern programming languages today are turing complete and as such
+are "equally powerful". For simplicity however not all languages are created
+equal, as section \ref{sec:Turing Completeness} will note. Lets therefore
+introduce a simple, but expressive enough language called {\tt WHILE}.
 
 \subsection{The Elements} % (fold)
 \label{sub:The Elements}
@@ -17,10 +17,10 @@ simple, but expressive enough language called {\tt WHILE}.
 \paragraph{Alternatives to the {\tt WHILE} construct} % (fold)
 \label{par:Alternatives to the WHILE construct}
 \lineofthought{
-  \begin{itemize}
-  	\item Unrestricted Recursion
-	\item Unbound Search ($\mu$)
-	\item Applying rules as long as possible (Markov)
+	\begin{itemize}
+		\item Unrestricted Recursion
+		\item Unbound Search ($\mu$)
+		\item Applying transition rules as long as possible (Markov)
   \end{itemize}
 }
 % paragraph Alternatives to the WHILE construct (end)
@@ -28,16 +28,7 @@ simple, but expressive enough language called {\tt WHILE}.
 \label{ssub:Natural Numbers}
 \lineofthought{Bei \cite{jones} sind Zahlen unär codiert, zerstört das nicht 
 alle möglichen Eigenschaften, wie {\tt add} in $\log n$ Zeit? Gucken, ob 
-nicht Binär drin vorkommt.}
+nicht Binär in Complexity vorkommt.}
 
 % subsubsection Natural Numbers (end)
 % subsection cons (end)
-
-\subsection{Turing Completeness} % (fold)
-\label{sub:Turing Completeness}
-\lineofthought{
-  Wärend theoretisch jede tc Sprache äquivalent ist, muss das praktisch 
-  nichts heissen: Referenz zu Brainfuck und Conway's Game of Life
-}
-
-% subsection Turing Completeness (end)
