added articles and some notes

--- a/text/appendix.tex
+++ b/text/appendix.tex
@@ -1,11 +1,14 @@
 \section{Implementing the {\tt WHILE} Language} 
 \label{sec:implementing while}
-\section{Questions}
+\section{My general notes}
 \lineofthought{
-  \begin{itemize}
-  	\item Is this supposed to be more of a text book article
-	\item Do I need to include exercises?
-	\item How much basics have to be included (Halting Problem, ...), does it 
-	  need to be stand-alone?
-  \end{itemize}
+	\begin{itemize}
+		\item Parallel text to B\&K
+		\item Exercises ~2 per chapter
+		\item Summaries of "known topics"
+		\item Michael Sipser: {\em Introduction to the Theory of Computation} 
+			standard text.
+		\item Intrinsic complexity (defining languages that capture complexity 
+			classes)
+	\end{itemize}
 }
