--- a/text/biblio.bib
+++ b/text/biblio.bib
@@ -24,3 +24,11 @@
  address = {New York, NY, USA},
  keywords = {just-in-time specialization, python, representation, unlift},
 } 
+@article{nilsson2000porting,
+  title={Porting GCC for dunces},
+  author={Nilsson, H.P.},
+  journal={Master Thesis},
+  volume={5},
+  pages={43--54},
+  year={2000}
+}
