--- a/text/transforms/main.tex
+++ b/text/transforms/main.tex
@@ -37,7 +37,9 @@ Instead the Gnu Compiler Collection uses a concept called {\em bootstrapping}:
 A very small subset of the languages supported by the {\em gcc} has its 
 compiler written in the machine language and this minimal compiler is then 
 used to compile the next compiler and so on, until the whole collection is 
-translated into the new machine language.
+translated into the new machine language \cite{nilsson2000porting}.
+
+This process is called {\em bootstrapping}
 \lineofthought{ Bootstrapping von {\tt gcc} }
 % paragraph How the gcc is ported (end)
 
