renaming files for improved titlebars

--- a/text/main.tex
+++ b/text/main.tex
@@ -47,15 +47,15 @@
   \include*{abstract}	
 \end{abstract}
 
-\include*{while/main}
+\include*{while/while}
 
-\include*{transforms/main}
+\include*{transforms/transforms}
 
-\include*{completeness/main}
+\include*{completeness/completeness}
 
-\include*{self/main}
+\include*{self/self}
 
-\include*{complexity/main}
+\include*{complexity/complexity}
 
 \bibliography{biblio}{}
 \bibliographystyle{plain}
