--- a/text/complexity/complexity.tex
+++ b/text/complexity/complexity.tex
@@ -15,13 +15,12 @@ the notion of being complex relative to a language.
 \label{ssub:NP-complexity}
 
 % subsubsection NP-complexity (end)
-\subsubsection{$P \neq NP$ from a Linguistic Point of View} % (fold)
-\label{ssub:PNP from a Linguistic Point of View}
+\subsubsection{An intrinsic view of $P \neq NP$} % (fold)
+\label{ssub:intrinsicPNP}
 \lineofthought{
   Um zu zeigen, dass $NP \neq P$ ist, muss nun gezeigt werden, dass sich das 
   Kommando {\tt CHOICE} nicht in die $P$ Sprache übersetzen lässt.
 }
 
-% subsubsection $P \neq NP$ from a Linguistic Point of View (end)
-
+% subsubsection P neq NP
 % subsection Complexity by Dialect (end)
