--- a/text/main.tex
+++ b/text/main.tex
@@ -47,6 +47,8 @@
   \include*{abstract}	
 \end{abstract}
 
+\include*{introduction/introduction}
+
 \include*{while/while}
 
 \include*{transforms/transforms}
