2AM? might as well plan new chapter

--- a/text/main.tex
+++ b/text/main.tex
@@ -57,7 +57,9 @@
 
 \include*{self/self}
 
-\include*{complexity/complexity}
+\include*{robustness/robustness}
+
+\include*{langcomplexity/langcomplexity}
 
 \bibliography{biblio}{}
 \bibliographystyle{plain}
