Added picture for while data
and some text that needs reformating

--- a/text/main.tex
+++ b/text/main.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 \usepackage[utf8x]{inputenc}
 \usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage{amsfonts}
 \usepackage{amsthm}
 \usepackage{ucs}
@@ -11,6 +12,7 @@
 \usepackage[titletoc,page]{appendix}
 \usepackage[stable]{footmisc}
 \usepackage{xifthen}
+\usepackage{graphicx}
 
 \newcommand{\pfunc}{\xrightarrow{p}}
 \newcommand{\peq}{\simeq}
