a language definition is actually a table, isn't it?

--- a/text/while/while.tex
+++ b/text/while/while.tex
@@ -5,7 +5,7 @@ are "equally powerful". For simplicity however not all languages are created
 equal, as section \ref{sec:Turing Completeness} will note. Lets therefore
 introduce a simple, but expressive enough language called {\tt WHILE}.
 
-\begin{figure*}[h]
+\begin{table*}[h]
 	\begin{align*}
 		Expression \ni E, F::= \qquad
 										& \mathtt{nil} & | \\
@@ -22,7 +22,7 @@ introduce a simple, but expressive enough language called {\tt WHILE}.
 										& I_1\; \mathtt{read}\; I_2\; \mathtt{\{}\; S\; \mathtt{\}}\; \mathtt{write}\; I_3 & | \\
 										& Q  \; \text{\tt{<newline>}}\; P
 	\end{align*}
-\end{figure*}
+\end{table*}
 
 \subsection{The Elements} % (fold)
 \label{sub:The Elements}
