--- a/text/main.tex
+++ b/text/main.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass{book}
 \usepackage[utf8x]{inputenc}
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -45,19 +45,27 @@
 \begin{document}
 \maketitle
 \tableofcontents
-\begin{abstract}
-  \include*{abstract}	
-\end{abstract}
+%\begin{abstract}
+  %\include*{abstract}	
+%\end{abstract}
+%
+\chapter{Introduction}
 
 \include*{introduction/introduction}
 
 \include*{while/while}
+
+\chapter{Computability}
 
 \include*{transforms/transforms}
 
 \include*{completeness/completeness}
 
 \include*{self/self}
+
+\chapter{Complexity}
+
+\include*{complexity/complexity}
 
 \include*{robustness/robustness}
 
