--- a/text/introduction/introduction.tex
+++ b/text/introduction/introduction.tex
@@ -5,7 +5,7 @@ complexity theory gives the problem (not the concrete algorithm!) a general
 assessment of its difficulty, i.e. no algorithm can solve the problem faster 
 than its inert complexity.
 
-For this one needs an idea what a problem is, and when it is solvable. A 
+For this, one needs an idea what a problem is, and when it is solvable. A 
 problem can be understood as getting some kind of input data $x\in \Input[A]$ 
 and needing to produce an output value $y\in \Output[A]$, in other words: 
 computing a function $f:\Input[A] \rightarrow \Output[A]$\footnote{Equivalently, 
@@ -37,8 +37,8 @@ about programming languages and is closer to them then to building machines
 or even mathematical constructs.
 
 Nearly all modern languages try to capture the full spectrum of solvable 
-problems. For the sake of this text, a very simple language is considered, 
-which consists of elements common in modern languages.
+problems. For the purposes of this text, the \WHILE language will 
+serve as a minimal coding for computability.
 
 \lineofthought{
 	I need to explain stuff I'll need in the chapter \ref{sec:WHILE}, e.g. 
@@ -52,13 +52,40 @@ which consists of elements common in modern languages.
 }
 \subsection{What is a programming language?} % (fold)
 \label{sub:What is a programming language}
-Before we can talk about computability in programming languages, we need to 
-define, what a programming language is. 
+We have an intuitive notion of what a programming language is, which probably 
+goes like "A language, in which programs can be written" or "An 
+executable language". But what makes a string of letters executable? 
 
-\lineofthought{
-	A language is a set of lists of characters (so called words). A programming 
-	language also has a semantic function 
-	$\interpret{.}: A\rightarrow (\ensuremath{\mathbb{N}} \rightarrow \ensuremath{\mathbb{N}})$.
-}
+The difference is just that we know how a programming language should be 
+interpreted, i.e. a program can be mapped to a function and thus in the 
+realm of mathematics.
+\begin{defn}
+	A {\em semantic function} $\interpret[A]{.}$ for a programming language $A$ is a function
+	\[ \interpret[A]{.}: A \rightarrow \left( \Input[A] \rightarrow \Output[A]\right)\]
+	That is, the function $\interpret[A]{.}$ takes a valid $A$ program and 
+	gives a function that maps inputs for $A$ programs to outputs.
+\end{defn}
+The semantic function defines what a program {\em means}, while its syntax 
+defines {\em how it should look like}. It typically uses other functions to 
+denote parts of the program. 
+\begin{example}
+	As a part of a programming language, we want to know the semantics of 
+	$\mathtt{572}$. Note that $\mathtt{572}$ is a string, not the number. However 
+	$\interpret[dec]{\mathtt{572}}=5\cdot 100+7\cdot 10+ 2$ {\em is} the number, not the string. 
+\end{example}
+
+When describing a programming language, the terms {\em expression} and {\em
+statement} will be used often. An {\em expression} is a representation of 
+data used in the language. It returns a value and can depend on the state of 
+the computation, e.g. to evaluate variables. Some expressions even change the 
+state of the computation. A {\em statement} does not return a value and just 
+changes the state.
+\begin{example}
+	In the assignment in a {\tt C}-like language {\tt int four = 2+2;}, the 
+	whole line is a statement since it introduces a new variable name, that 
+	can be referenced. {\tt 2+2} is an expression that returns $4$. After this 
+	line, {\tt four} is an expression as well and will return the current value 
+	of the variable.
+\end{example}
 
 % subsection What is a programming language (end)
